--- a/tex/sources.bib
+++ b/tex/sources.bib
@@ -73,3 +73,10 @@
   year={2017},
   publisher={Taylor \& Francis}
 }
+
+@article{detommaso2018stein,
+  title={A Stein variational Newton method},
+  author={Detommaso, Gianluca and Cui, Tiangang and Spantini, Alessio and Marzouk, Youssef and Scheichl, Robert},
+  journal={arXiv preprint arXiv:1806.03085},
+  year={2018}
+}
